Update 8: movement logic, calculation logic
Changed the way of calculating the size and distance and such of objects. Changed it from in-built functions to own implementations

--- a/CoreModuleSol/CoreModule/CoreModule.vcxproj
+++ b/CoreModuleSol/CoreModule/CoreModule.vcxproj
@@ -133,11 +133,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bounds.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bounds.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
   </ItemGroup>
